# cuda-image-filters

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/bench/: bench_main.cpp  filter2d_bench.cpp
lib/include/: filters.hpp  filters_errors.hpp
lib/src/: filters.cu  filters_errors.cu
lib/test/: test_main.cpp
